--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/312926fc77.js" crossorigin="anonymous"></script>
     <title>Main Page</title>
 </head>
-
+<body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="navbar_logo">
             <a href="{% url 'mainpage:mainpage' %}">
@@ -121,5 +121,5 @@
 
     </script>
 
-
+</body>
 </html>
