--- a/recipeboard/templates/recipeboard/recipeboard_detail.html
+++ b/recipeboard/templates/recipeboard/recipeboard_detail.html
@@ -83,7 +83,8 @@
         {% for image in images %}
             <img class = "image-thumbail"
                 src="{{ MEDIA_URL }}{{ image.image }}" 
-                alt="">
+                alt=""
+                style="width:250px;height:auto;">
         {% endfor %}
     </div>
     <hr>
