--- a/communityboard/static/css/style-cdetail.css
+++ b/communityboard/static/css/style-cdetail.css
@@ -6,10 +6,16 @@ a {
     text-decoration: none;
     color:none;
 }
-div.title {
+
+div#header{
+    font-size:15;
     display:flex;
     align-items: center;
+}
+div#title {
     font-size: 30;
+    display:flex;
+    align-items: center;
     height:80px;
 }
 #time{
