--- a/mypage/static/withdrawal.css
+++ b/mypage/static/withdrawal.css
@@ -1,10 +1,53 @@
+.card {
+    display: flex;
+    flex-direction: column;
+    height:fit-content;
+}
+.card-header {
+    padding: 1.5rem 2rem 1rem;
+    border-radius: 10px 10px 0 0;
+    border-bottom: 3px solid #d3d3d3;
+    background-color: #d3d3d3b3;
+}
+.card-body {
+    padding: 0 2rem 2rem;
+}
+#check_warning {
+    color: red;
+}
+#check_sector {
+    border-bottom: 2px solid rgb(194, 193, 193);
+}
+.wrap-btn {
+    display:flex;
+    justify-content: space-evenly;
+}
+.btn_btn-sm {
+    color:white;
+    font-weight:bold;
+    font-size: 15px;
+    text-align: center;
+    padding: 5px 6px;
+    border-width: 2px;
+    border-style: outset;
+    border-color: transparent;
+    box-shadow:  4px 4px 5px #b1b1b1;
+    
+}
+#detail_btn {
+    background-color: #9c5151f2;
+}
+#back_btn {
+    background-color: #535353;
+    cursor:pointer;
+}
+
 [type="checkbox"],
 [type="radio"] {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     padding: 0
 }
-
 
 [type="checkbox"]:not(:checked),
 [type="checkbox"]:checked {
@@ -108,119 +151,6 @@
     background-color: transparent
 }
 
-[type="checkbox"].filled-in+span:not(.lever):after {
-    border-radius: 2px
-}
-
-[type="checkbox"].filled-in+span:not(.lever):before,
-[type="checkbox"].filled-in+span:not(.lever):after {
-    content: '';
-    left: 0;
-    position: absolute;
-    -webkit-transition: border .25s, background-color .25s, width .20s .1s, height .20s .1s, top .20s .1s, left .20s .1s;
-    transition: border .25s, background-color .25s, width .20s .1s, height .20s .1s, top .20s .1s, left .20s .1s;
-    z-index: 1
-}
-
-[type="checkbox"].filled-in:not(:checked)+span:not(.lever):before {
-    width: 0;
-    height: 0;
-    border: 3px solid transparent;
-    left: 6px;
-    top: 10px;
-    -webkit-transform: rotateZ(37deg);
-    transform: rotateZ(37deg);
-    -webkit-transform-origin: 100% 100%;
-    transform-origin: 100% 100%
-}
-
-[type="checkbox"].filled-in:not(:checked)+span:not(.lever):after {
-    height: 20px;
-    width: 20px;
-    background-color: transparent;
-    border: 2px solid #5a5a5a;
-    top: 0px;
-    z-index: 0
-}
-
-[type="checkbox"].filled-in:checked+span:not(.lever):before {
-    top: 0;
-    left: 1px;
-    width: 8px;
-    height: 13px;
-    border-top: 2px solid transparent;
-    border-left: 2px solid transparent;
-    border-right: 2px solid #fff;
-    border-bottom: 2px solid #fff;
-    -webkit-transform: rotateZ(37deg);
-    transform: rotateZ(37deg);
-    -webkit-transform-origin: 100% 100%;
-    transform-origin: 100% 100%
-}
-
-[type="checkbox"].filled-in:checked+span:not(.lever):after {
-    top: 0;
-    width: 20px;
-    height: 20px;
-    border: 2px solid #a00303f2;
-    background-color: #a00303f2;
-    z-index: 0
-}
-
-[type="checkbox"].filled-in.tabbed:focus+span:not(.lever):after {
-    border-radius: 2px;
-    border-color: #5a5a5a;
-    background-color: rgba(0, 0, 0, 0.1)
-}
-
-[type="checkbox"].filled-in.tabbed:checked:focus+span:not(.lever):after {
-    border-radius: 2px;
-    background-color: #a00303f2;
-    border-color: #a00303f2
-}
-
-[type="checkbox"].filled-in:disabled:not(:checked)+span:not(.lever):before {
-    background-color: transparent;
-    border: 2px solid transparent
-}
-
-[type="checkbox"].filled-in:disabled:not(:checked)+span:not(.lever):after {
-    border-color: transparent;
-    background-color: #949494
-}
-
-[type="checkbox"].filled-in:disabled:checked+span:not(.lever):before {
-    background-color: transparent
-}
-
-[type="checkbox"].filled-in:disabled:checked+span:not(.lever):after {
-    background-color: #949494;
-    border-color: #949494
-}
-
-
-
-.switch label input[type=checkbox] {
-    opacity: 0;
-    width: 0;
-    height: 0
-}
-
-.switch label input[type=checkbox]:checked+.lever {
-    background-color: #84c7c1
-}
-
-.switch label input[type=checkbox]:checked+.lever:before,
-.switch label input[type=checkbox]:checked+.lever:after {
-    left: 18px
-}
-
-.switch label input[type=checkbox]:checked+.lever:after {
-    background-color: #a00303f2
-}
-
-
-
 input[type=checkbox]:checked:not(:disabled)~.lever:active::before,
 input[type=checkbox]:checked:not(:disabled).tabbed:focus~.lever::before {
     -webkit-transform: scale(2.4);
@@ -233,16 +163,6 @@ input[type=checkbox]:not(:disabled).tabbed:focus~.lever::before {
     -webkit-transform: scale(2.4);
     transform: scale(2.4);
     background-color: rgba(0, 0, 0, 0.08)
-}
-
-.switch input[type=checkbox][disabled]+.lever {
-    cursor: default;
-    background-color: rgba(0, 0, 0, 0.12)
-}
-
-.switch label input[type=checkbox][disabled]+.lever:after,
-.switch label input[type=checkbox][disabled]:checked+.lever:after {
-    background-color: #949494
 }
 
 /*mdb input background color*/
