--- a/mypage/templates/mypage/withdrawal.html
+++ b/mypage/templates/mypage/withdrawal.html
@@ -1,49 +1,44 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href='{% static "withdrawal.css"%}?after'>
-<div id="add_feed">탈퇴하기</div>
+<link rel="stylesheet" type="text/css" href='{% static "withdrawal.css"%}'>
+<div id="add_feed"><i class="fa-solid fa-user-slash"></i></div>
 <div id="model_add_feed" class="modal_overlay">
     <div class="modal_window">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="card">
-                    <div class="card-header">
-                        <strong style="font-size: 18px;"><i class="fas fa-user-slash"></i>&nbsp;&nbsp;회원탈퇴</strong>
+        <div class="card">
+            <div class="card-header">
+                <strong><i class="fas fa-user-slash"></i>&nbsp;&nbsp;회원탈퇴</strong>
+            </div>
+            <div class="card-body">
+                <form method="POST" novalidate>
+                    {% csrf_token %}
+                    <p><strong>{{ form.first_name.value }}</strong> 님의 계정이 삭제됩니다.<br><br>
+                        탈퇴시 개인정보가 삭제되며 복구할 수 없고 <br>게시글은 자동 삭제되지 않습니다. <br><br>
+                        아래의 문장을 똑같이 입력한 후 하단의 유의사항 동의에 체크하세요.
+                    </p>
+                    <div class="mb-4 md-form">
+                        <div>
+                            <span>흙에서 자란 내 마음 파아란 하늘빛</span>
+                        </div>
+                        <div id="check_sector">
+                            <input type="text" name="sentence" class="form-control" id="id_sentence" required >
+                        </div>
+                        <small id="check_warning">문장이 일치하지 않습니다.</small>
                     </div>
-                    <div class="card-body">
-                        <form method="POST" novalidate>
-                            {% csrf_token %}
-                            <p>EAT VILLAGE 에서 <strong>{{ form.first_name.value }}</strong> 회원님의 계정이 삭제됩니다.<br>
-                                탈퇴시 개인정보가 삭제되며 복구할 수 없고 게시글은 자동 삭제되지 않습니다. <br>
-                                본인의 비밀번호를 입력한 후 하단의 유의사항 동의에 체크하세요.
-                            </p>
-                            <div class="mb-4 md-form">
-                                <div>
-                                    <small class="form-text text-muted">
-                                        아래의 문장을 똑같이 입력해주세요
-                                    </small><br>
-                                    <span>흙에서 자란 내 마음 파아란 하늘빛</span>
-                                </div>
-                                <input type="text" name="sentence" class="form-control" required id="id_sentence">
-                                <small id="check_warning">문장이 일치하지 않습니다.</small>
-                            </div>
 
-                            <label>
-                                <input type="checkbox" name="ck" onClick="checkDisable(this.form)">
-                                <span style="color:#d14040f2; font-weight: bold;"> 유의사항 동의</span>
-                            </label>
-                            <p style="color:gray; margin-bottom: 4px;"><i class="fas fa-exclamation-triangle"></i>&nbsp;{{ form.username.value }} 계정이 삭제됩니다.</p>
-                            <div>
-                                <a class="btn btn-sm" id="back_btn"><i class="fa fa-reply"></i>&nbsp;돌아가기</a>
-    
-                                <button type="submit" class="btn btn-sm" name="bt_delete" id="detail_btn" disabled="true" >
-                                    <i class="fas fa-check"></i>&nbsp;탈퇴하기
-                                </button>
-        
-                            </div>
-                        </form>
-                        
+                    <label>
+                        <input type="checkbox" name="ck" onClick="checkDisable(this.form)">
+                        <span style="color:#d14040f2; font-weight: bold;"> 유의사항 동의</span>
+                    </label>
+                    <p><i class="fas fa-exclamation-triangle"></i>&nbsp;{{ form.username.value }} 계정이 삭제됩니다.</p>
+                    <div class="wrap-btn">
+                        <a class="btn_btn-sm" id="back_btn"><i class="fa fa-reply"></i>&nbsp; 돌아가기</a>
+
+                        <button type="submit" class="btn_btn-sm" name="bt_delete" id="detail_btn" disabled="true" >
+                            <i class="fas fa-check"></i>&nbsp; 탈퇴하기
+                        </button>
+
                     </div>
-                </div>
+                </form>
+                
             </div>
         </div>
     </div>
@@ -67,16 +62,13 @@
         try {
             currentVal = $(this).val();
             if(currentVal == oldVal && sentence == currentVal) {
-                // warning.style.color = 'blue';
                 $("#check_warning").css('color', 'blue');
-                // warning.innerText = '문장이 일치합니다.';
                 $("#check_warning").text('문장이 일치합니다.');
 
                 return;
             }
             else{
                 $("#check_warning").css('color', 'red');
-                // warning.innerText = '문장이 일치합니다.';
                 $("#check_warning").text('문장이 일치하지 않습니다.');
             }
             oldVal = currentVal;
@@ -89,10 +81,12 @@
     function checkDisable(form) {
         if (form.ck.checked == true && sentence == currentVal) {
             form.bt_delete.disabled = false;
+            form.bt_delete.style.backgroundColor = '#a00303f2';
+            form.bt_delete.style.cursor = 'pointer';
         } else {
             form.bt_delete.disabled = true;
+            form.bt_delete.style.backgroundColor = '#9c5151f2';
+            form.bt_delete.style.cursor = '';
         }
     };
-
-    
 </script>
