--- a/communityboard/static/css/style-cdetail.css
+++ b/communityboard/static/css/style-cdetail.css
@@ -12,11 +12,15 @@ div#header{
     display:flex;
     align-items: center;
 }
-div#title {
+div.title {
     font-size: 30;
     display:flex;
     align-items: center;
     height:80px;
+}
+div.title-2 {
+    margin-left:auto;
+    font-size: 16;
 }
 #time{
     font-size:5;
