--- a/recipeboard/templates/recipeboard/recipeboard_detail.html
+++ b/recipeboard/templates/recipeboard/recipeboard_detail.html
@@ -11,7 +11,7 @@
 
     <!-- custom CSS -->
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style-detail.css' %}?after">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style-detail.css' %}">
 
     <!-- Font -->
     <link rel="stylesheet" type="text/css"
@@ -81,10 +81,12 @@
     <hr>    
     <div>
         {% for image in images %}
+            {% if image.image %}
             <img class = "image-thumbail"
                 src="{{ MEDIA_URL }}{{ image.image }}" 
                 alt=""
                 style="width:250px;height:auto;">
+            {% endif %}
         {% endfor %}
     </div>
     <hr>
