mypage, 탈퇴화면, 글 목록 :css 수정

--- a/mypage/static/mypage.css
+++ b/mypage/static/mypage.css
@@ -322,8 +322,10 @@ input:focus {
     }
 
     /* membership withdrawal */
+    .modal_overlay {
+        height: 66rem;
+    }
     .modal_window {
         width: 70%;
-        height: 25rem;
     }
 }
