--- a/mypage/static/withdrawal.css
+++ b/mypage/static/withdrawal.css
@@ -12,6 +12,12 @@
 .card-body {
     padding: 0 2rem 2rem;
 }
+@media screen and (max-width:560px) {
+    .card-body {
+        padding: 0 1.5rem 1.5rem;
+    }
+}
+
 #check_warning {
     color: red;
 }
