--- a/mypage/static/write.css
+++ b/mypage/static/write.css
@@ -13,9 +13,10 @@ html {
 
 body {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-content: center;
-  padding: 6rem;
+  padding: 5rem;
   background-color: #f5f5f5;
   font-family: "Inter", sans-serif;
 }
@@ -24,11 +25,29 @@ body {
     padding: 2rem;
   }
 }
+#btn_back {
+  height:4rem;
+  font-size: 1.5rem;
+  float:left;
+  text-align: center;
+  margin-right:89.5%;
+  margin-bottom:1.5rem;
+  padding:1rem;
+  border-radius: 10px;
+  background: #f5f5f5;
+  box-shadow:  5px 5px 10px #e6e6e6,
+               -5px -5px 10px #ffffff;
+  text-decoration: none;
+  color:black;
+}
+.card {
+  text-decoration: none;
+}
 
 .grid {
   display: grid;
   width: 114rem;
-  grid-gap: 6rem;
+  grid-gap: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   align-items: start;
 }
@@ -37,6 +56,19 @@ body {
     grid-gap: 3rem;
   }
 }
+
+.wrap {
+  display: grid;
+  grid-gap: 3rem;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  
+}
+@media (max-width: 60em) {
+  .wrap {
+    display: flex;
+  }
+}
+
 .grid__item {
   background-color: #fff;
   border-radius: 0.4rem;
@@ -46,6 +78,13 @@ body {
   transition: 0.2s;
   width: 35rem;
 }
+@media (max-width: 60em) {
+  .grid__item {
+    display: flex;
+    width: 16rem;
+  }
+}
+
 .grid__item:hover {
   transform: translateY(-0.5%);
   box-shadow: 0 4rem 8rem rgba(0, 0, 0, 0.2);
@@ -65,6 +104,7 @@ body {
   font-weight: 500;
   color: #0d0d0d;
   margin-bottom: 1.5rem;
+  height: 5rem;
 }
 .card__text {
   font-size: 1.5rem;
@@ -89,6 +129,33 @@ body {
 .card__btn span {
   margin-left: 1rem;
   transition: 0.2s;
+}
+@media (max-width: 60em) {
+  .card {
+    width:100%;
+  }
+  .card__header {
+    font-size: 2rem;
+    font-weight: bold;
+    margin:0;
+  }
+  .card__content{
+    padding:1.5rem 1.5rem;
+  }
+  .card__img{
+    height: 9rem;
+    
+  }
+  .card__text{
+    height: 7rem;
+    margin-bottom: 0;
+    width: 100%;
+  }
+  .card__btn{
+    margin:1.5rem;
+    padding: 0;
+  }
+  
 }
 .card__btn:hover, .card__btn:active {
   background-color: #dce4ff;
